# wbjj

./: .pre-commit-config.yaml  DEPLOY_DOCS.md  SETUP_SCRIPTS.md  T002B_DOCKER_SETUP.md  T002_MODELS_DJANGO.md
.github/workflows/: docs.yml
apps/authentication/: models.py
backend/: .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  CONTEXT.md  CUSTOMIZATION.md  DOCKER_DEVELOPMENT.md  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
backend-mvp/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend-mvp/apps/authentication/: admin.py  apps.py  models.py
backend-mvp/apps/authentication/migrations/: 0001_initial.py
backend-mvp/apps/core/: exceptions.py  middleware.py  models.py  openapi.py  pagination.py  permissions.py  urls.py  viewsets.py
backend-mvp/apps/core/management/: __init__.py
backend-mvp/apps/core/management/commands/: seed_data.py  wait_for_db.py
backend-mvp/apps/payments/: apps.py  models.py  urls.py
backend-mvp/apps/payments/migrations/: 0001_initial.py
backend-mvp/apps/students/: admin.py  models.py  urls.py
backend-mvp/apps/students/migrations/: 0001_initial.py
backend-mvp/apps/tenants/: apps.py  models.py  serializers.py  views.py
backend-mvp/apps/tenants/migrations/: 0001_initial.py
backend-mvp/config/settings/: base.py  development.py  production.py  testing.py
backend-mvp/docs/: mkdocs.yml
backend-mvp/docs/docs/: about.md  api.md  authentication.md  context.md  customization.md  index.md  testing.md  usage.md  variables.yml
backend-mvp/docs/docs/includes/: abbreviations.md
backend-mvp/docs/docs/javascripts/: extra.js
backend-mvp/scripts/: serve-docs.sh  test-commands.sh  test-with-db.sh  test-without-db.sh
backend-mvp/tests/: README_TEST_STRUCTURE.md  base.py
backend-mvp/tests/with_db/core/: test_exceptions.py  test_viewsets.py
backend-mvp/tests/with_db/factories/: authentication.py  payments.py  students.py  tenants.py
backend-mvp/tests/with_db/middleware/: test_tenant_middleware.py
backend-mvp/tests/with_db/models/: __init__.py  test_authentication.py  test_tenants.py
backend-mvp/tests/with_db/serializers/: __init__.py  test_authentication.py  test_payments.py  test_tenants.py
backend-mvp/tests/with_db/views/: test_students.py
backend-mvp/tests/without_db/: base.py
backend-mvp/tests/without_db/core/: test_serializers_validation.py
backend/apps/: __init__.py
backend/apps/authentication/: admin.py  apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/apps/authentication/migrations/: 0001_initial.py  0002_alter_user_managers.py
backend/apps/core/: middleware.py  models.py  permissions.py  serializers.py  views.py  viewsets.py
backend/apps/core/management/: __init__.py
backend/apps/core/management/commands/: migrate_tenant_schemas.py  seed_data.py  wait_for_db.py
backend/apps/payments/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/payments/migrations/: 0001_initial.py
backend/apps/students/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/students/migrations/: 0001_initial.py  0002_alter_attendance_class_type.py
backend/apps/tenants/: admin.py  apps.py  models.py  serializers.py  urls.py
backend/apps/tenants/migrations/: 0001_initial.py
backend/config/: urls.py
backend/config/settings/: base.py  development.py  production.py  testing.py
backend/docs/: README.md  mkdocs.yml
backend/docs/docs/: about.md  api.md  authentication.md  context.md  customization.md  index.md  testing.md
backend/scripts/: dev-setup.sh  init-db.sh  test-docs-build.sh
backend/staticfiles/css/: custom-admin.css
backend/tests/with_db/: conftest.py
backend/tests/with_db/core/: test_permissions.py
backend/tests/with_db/factories/: __init__.py  authentication.py  payments.py  students.py  tenants.py
backend/tests/with_db/middleware/: __init__.py
backend/tests/with_db/models/: test_payments.py  test_students.py
backend/tests/with_db/serializers/: test_students.py
backend/tests/with_db/views/: __init__.py  test_authentication.py  test_core.py  test_payments.py  test_tenants.py
backend/tests/without_db/core/: test_openapi.py
doc/: ARCHITECTURE.md  README.md  ROADMAP.md  TASKS.md
doc/app/: README.md
doc/backend/: README.md
doc/web/: README.md
frontend/: components.json  index.html  package.json  vite.config.js
frontend/src/: main.js
frontend/src/components/ui/button/: Button.vue
frontend/src/router/: index.js
